feat: add Lucky Number as game option
